# vms

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  INDICE.md  Makefile  PLANO_IA.md  README.md  deploy.sh  docker-compose.yml  seed.bat
analytics/: .dockerignore  Dockerfile  pyproject.toml
analytics/src/analytics/: main.py  worker.py
analytics/src/analytics/core/: config.py  detection_cache.py  file_frame_source.py  frame_source.py  gpu_check.py  metrics.py  orchestrator.py  plugin_base.py  segment_processor.py  shared_inference.py  vms_client.py  yolo_base.py  zones.py
analytics/tests/integration/: test_analytics_api.py
analytics/tests/unit/: test_intrusion_plugin.py  test_lpr_plugin.py  test_people_count_plugin.py
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/migrations/: env.py
api/migrations/versions/: 001_initial_schema.py  002_stream_sessions.py  003_camera_protocols.py  004_ptz_supported.py  005_remove_roi_table.py  005_retention_pending.py  006_camera_stream_quality.py  007_camera_geo_and_ia.py  008_add_analytics_tables.py  009_analytics_rois_and_nullable_fk.py  010_vod_streams_table.py  011_recording_analytics_fields.py  012_audit_log_table.py  013_add_sha256_to_segments.py  014_reports_table.py  015_add_isapi_fields_to_cameras.py  016_create_billing_plans.py  016b_create_licenses.py  017_add_tenant_billing_fields.py  017b_cleanup_old_billing.py  018_create_usage_records.py  019_create_retention_policies.py  020_create_consent_records.py  021_billing_plans_and_subscriptions.py  021_license_keys.py  022_license_keys.py  023_merge_licenses_branch.py  024_normalize_alpr_event_type.py  025_tenant_branding.py  026_event_image_path.py
api/src/vms/: main.py  worker.py
api/src/vms/analytics/: __init__.py  models.py  router.py  service.py  tasks.py
api/src/vms/analytics_config/: domain.py  models.py  repository.py  router.py  schemas.py  service.py
api/src/vms/audit/: __init__.py  domain.py  models.py  repository.py  router.py  service.py
api/src/vms/billing/: __init__.py  domain.py  models.py  repository.py  router.py  service.py
api/src/vms/cameras/: domain.py  isapi_router.py  mediamtx.py  models.py  onvif_client.py  ports.py  repository.py  router.py  schemas.py  service.py  snapshot.py  tasks.py  thumbnail.py
api/src/vms/core/: config.py  database.py  deps.py  dlq.py  event_bus.py  exceptions.py  logging_config.py  pagination.py  rate_limit.py  security.py
api/src/vms/events/: domain.py  images.py  models.py  ports.py  repository.py  router.py  schemas.py  service.py
api/src/vms/health/: router.py
api/src/vms/iam/: domain.py  models.py  repository.py  router.py  schemas.py  service.py
api/src/vms/infrastructure/: __init__.py  encryption.py  exceptions.py  security.py
api/src/vms/lgpd/: __init__.py  anonymization.py  domain.py  models.py  repository.py  router.py
api/src/vms/notifications/: dispatcher.py  domain.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
api/src/vms/plugins/: ports.py  roi_cache.py  router.py  schemas.py  service.py
api/src/vms/ptz/: __init__.py  client.py  domain.py  router.py  schemas.py  service.py
api/src/vms/recordings/: domain.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
api/src/vms/reports/: __init__.py  domain.py  models.py  pdf_generator.py  repository.py  router.py  schemas.py  service.py  tasks.py
api/src/vms/scripts/: create_cameras.py  create_tenant.py  seed.py  seed_billing_plans.py  seed_pricing_rules.py
api/tests/: conftest.py
api/tests/bdd/: conftest.py
api/tests/e2e/: conftest.py  test_recording_chain.py
api/tests/integration/: test_agent_ws.py  test_agents.py  test_alpr_webhook.py  test_audit.py  test_auth.py  test_cameras.py  test_e2e_alpr_to_notification.py  test_isapi.py  test_lgpd.py  test_mediamtx_hooks.py  test_notifications.py  test_read_auth.py  test_recordings.py  test_reports.py  test_rtmp_push.py  test_rtmp_push_auth.py  test_vod.py
api/tests/unit/: test_enriched_entities.py
edge_agent/: Dockerfile  pyproject.toml
edge_agent/src/: __init__.py
edge_agent/src/agent/: cloud_client.py  config.py  hardware.py  health_checker.py  main.py  optimizer.py  stream_manager.py
edge_agent/tests/: __init__.py  test_cloud_client.py  test_stream_manager.py  test_websocket_client.py
(+307 files in other folders)
