[project]
name = "vms-analytics"
version = "1.0.0"
description = "VMS Analytics Service — Plugin-based video analytics"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",
    "redis>=5.0,<6",
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.9,<5",
    "ultralytics>=8.1,<9",
    "fast-plate-ocr>=0.2,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "structlog>=24.1,<25",
    "arq>=0.26,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PLR"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
