[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vms-edge-agent"
version = "1.0.0"
description = "VMS MVP — Edge Agent (ffmpeg stream manager)"
requires-python = ">=3.12"
dependencies = [
    # HTTP client
    "httpx>=0.28",
    # WebSocket client (config push)
    "websockets>=13.0",
    # Validação / settings
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Logging estruturado
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-bdd>=7.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/agent"]

[tool.coverage.report]
show_missing = true
fail_under = 80
